# VolumeApproximation

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  format_files.py
ApproximationLib/: ApproximationHelper.cpp  CMakeLists.txt  ICpuVolumeApproximationStrategy.cpp  ParallelAlgorithmVolumeApproximationStrategy.cpp  VolumeApproximationManager.cpp  VolumeApproximator.cpp
ApproximationLib/ApproximationLibCpu/: CMakeLists.txt  ICpuVolumeApproximationStrategy.cpp  ParallelAlgorithmVolumeApproximationStrategy.cpp
ApproximationLib/ApproximationLibCpu/include/ApproximationLibCpu/: ApproximationLib_global.h  ICpuVolumeApproximationStrategy.h  ParallelAlgorithmVolumeApproximationStrategy.h
ApproximationLib/ApproximationLibCuda/: CMakeLists.txt  CudaVolumeApproximator.cu
ApproximationLib/ApproximationLibCuda/Include/ApproximationLibCuda/: ApproximationLibCuda_global.h  CudaVolumeApproximator.h
ApproximationLib/ApproximationLibInterface/: CMakeLists.txt  IVolumeApproximationStrategy.cpp
ApproximationLib/ApproximationLibInterface/include/ApproximationLibInterface/: ApproximationLibInterface_global.h  IVolumeApproximationStrategy.h  Vector3.h
ApproximationLib/include/ApproximationLib/: ApproximationHelper.h  ApproximationLib_global.h  ICpuVolumeApproximationStrategy.h  IVolumeApproximationStrategy.h  ParallelAlgorithmVolumeApproximationStrategy.h  VolumeApproximationManager.h  VolumeApproximator.h
UserInterface/: CMakeLists.txt  DisplayWidget.cpp  DisplayWidget.ui  MainWindow.cpp  SceneContainer.cpp  VolumeApproximationManager.cpp  displaywidget.cpp  displaywidget.ui  main.cpp  mainwindow.cpp  mainwindow.ui  scenecontainer.cpp
UserInterface/include/UserInterface/: DisplayWidget.h  MainWindow.h  SceneContainer.h  VolumeApproximationManager.h  displaywidget.h  mainwindow.h  scenecontainer.h
UserInterface/ui/: DisplayWidget.ui  MainWindow.ui  SceneContainer.ui
